hphp/test/zend/good/ext/dom/tests/config.skipif
<?hh
<<__EntryPoint>>
function main() {
  if (!extension_loaded('dom')) die('skip dom extension not available');
}
