hphp/test/zend/bad/ext/intl/tests/timezone_getDisplayName_variant2.php.skipif
<?php
if (!extension_loaded('intl'))
	die('skip intl extension not enabled');
if (version_compare(INTL_ICU_VERSION, '49') >= 0)
	die('skip for ICU < 49');
if (version_compare(INTL_ICU_VERSION, '4.8') < 0)
	die('skip for ICU 4.8+');